# flask-example

./: CHANGELOG.md  Makefile  pyproject.toml
src/flask_example/: cli.py  config.py  factory.py  plugins.py
src/flask_example/extensions/: bootstrap.py  socketio.py
src/flask_example/routes/: home.py
