[project]
name = "flask-example"
dynamic = [
    "version",
]
dependencies = [
    "flask ~= 3.1.3",
    "flask-socketio ~= 5.6.1",
    "bootstrap-flask ~= 2.5.0",
]
description = "flask-example"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Joshua B. Bussdieker", email = "jbussdieker@gmail.com" },
]
maintainers = [
    { name = "Joshua B. Bussdieker", email = "jbussdieker@gmail.com" },
]
classifiers = [
    "Framework :: Flask",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Environment :: Web",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Typing :: Typed",
]
keywords = ["flask", "example"]
license = "MIT"

[project.entry-points."flask_example.blueprints"]
home = "flask_example.routes.home:bp"

[project.entry-points."flask_example.extensions"]
bootstrap = "flask_example.extensions.bootstrap:init_app"
socketio = "flask_example.extensions.socketio:init_app"

[project.scripts]
flask-example = "flask_example.cli:main"

[project.optional-dependencies]
dev = [
    "mypy",
    "types-Flask-SocketIO",
]

[project.urls]
Homepage = "https://github.com/jbussdieker/flask-example"
Documentation = "https://github.com/jbussdieker/flask-example/blob/main/README.md"
Repository = "https://github.com/jbussdieker/flask-example"
Issues = "https://github.com/jbussdieker/flask-example/issues"
Changelog = "https://github.com/jbussdieker/flask-example/blob/main/CHANGELOG.md"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
